Added initial setup upload image

--- a/app/src/main/res/layout/activity_report_swarm.xml
+++ b/app/src/main/res/layout/activity_report_swarm.xml
@@ -1,25 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/llReportSwarm"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/general_layout_margin">
+
+
     <EditText
         android:id="@+id/etSwarmDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/general_layout_margin"
         android:hint="@string/description"
         android:inputType="text|textMultiLine"/>
+
+    <Button
+        android:id="@+id/btnChoosePhoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/general_layout_margin"
+        android:background="@color/colorAccent"
+        android:text="@string/choose_photo"
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/ivPhoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/general_layout_margin" />
+
     <Button
         android:id="@+id/btnReportSwarm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
-        android:text="@string/create_account"
+        android:text="@string/report_swarm"
         android:textColor="@android:color/white"
         android:textStyle="bold" />
+
     <ProgressBar
         android:id="@+id/pbReportSwarm"
         style="?android:attr/progressBarStyleLarge"
@@ -30,3 +53,4 @@
         android:max="100"
         android:visibility="gone" />
 </LinearLayout>
+</ScrollView>
