--- a/app/src/main/res/layout/activity_report_swarm.xml
+++ b/app/src/main/res/layout/activity_report_swarm.xml
@@ -2,15 +2,35 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-<LinearLayout
+
+    <LinearLayout
     android:id="@+id/llReportSwarm"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/general_layout_margin">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
+            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                tools:context=".activity.ReportSwarmActivity" />
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_target" />
+
+        </RelativeLayout>
+
+        <EditText
         android:id="@+id/etSwarmDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
